fixing-backface-visibility

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -11,14 +11,16 @@
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    box-shadow: 0 5px 10px rgba(154, 160, 185, .05),
-    0 15px 40px rgba(166, 173, 201, .2);
+    // box-shadow: 0 5px 10px rgba(154, 160, 185, .05),
+    // 0 15px 40px rgba(166, 173, 201, .2);
+    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+
 
     @media screen and (max-width: 650px) {
-       width: 100%;
-       height: 6.5rem;
-       flex-direction: row;
-    }  
+        width: 100%;
+        height: 6.5rem;
+        flex-direction: row;
+    }
 
     @media screen and (max-width: 381px) {
         height: 5.5rem;
@@ -59,8 +61,9 @@
             width: 10rem;
             text-align: center;
             background: #fff;
-            box-shadow: 0 5px 10px rgba(154, 160, 185, .05),
-                0 15px 40px rgba(166, 173, 201, .2);
+            // box-shadow: 0 5px 10px rgba(154, 160, 185, .05),
+            //     0 15px 40px rgba(166, 173, 201, .2);
+            box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
             color: rgba(#3d3d3d, .7);
             ;
             font-size: 1.5rem;
@@ -73,7 +76,7 @@
             opacity: 0;
             -webkit-transition: all .4s;
             -moz-transition: all .4s;
-            transition: all .4s;
+            transition: all .3s;
 
             @media screen and (max-width: 650px) {
                 visibility: hidden;
@@ -86,8 +89,9 @@
                 border-left: 5px solid transparent;
                 border-right: 5px solid transparent;
                 border-top: 5px solid #fff;
-                box-shadow: 0 5px 10px rgba(154, 160, 185, .05),
-                    0 15px 40px rgba(166, 173, 201, .2);
+                // box-shadow: 0 5px 10px rgba(154, 160, 185, .05),
+                //     0 15px 40px rgba(166, 173, 201, .2);
+                box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
                 position: absolute;
                 bottom: 11px;
                 left: -8px;
@@ -143,7 +147,7 @@
     font-size: 1.2rem;
     font-weight: 500;
     color: #666;
-    transition: color .5s;
+    transition: color .3s;
 
     @media screen and (max-width: 650px) {
         margin: 0 3rem 0 0;
@@ -188,7 +192,8 @@
     align-items: center;
     transition: left .8s cubic-bezier(1, 0, 0, 1);
     padding-top: 3rem;
-    box-shadow: 0 2rem 5rem rgba(0, 0, 0, .06);
+    // box-shadow: 0 2rem 5rem rgba(0, 0, 0, .06);
+    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
 
     @media screen and (max-width: 650px) {
         margin-top: 6.5rem;
@@ -250,11 +255,12 @@
         letter-spacing: .1rem;
         text-transform: uppercase;
         text-decoration: none;
-        transition: color .5s;
+        transition: color .3s;
         padding: 1rem 2rem;
         background-image: linear-gradient(120deg, transparent 0%, transparent 50%, white 50%);
         background-size: 220%;
-        transition: all .4s;
+        transition: all .3s;
+        backface-visibility: hidden;
 
         @media screen and (max-width: 381px) {
             font-size: 1.3rem;
